feat: add facebook reel video section

--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
       </div>
     </section>
 
+    <section class="reveal video-section">
+      <h2 class="section-title">Watch Our Story</h2>
+      <div class="video-container">
+        <iframe
+          src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Freel%2F539351792569691%2F&show_text=0&width=500"
+          width="500" height="888" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+          allowfullscreen="true"
+          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+      </div>
+    </section>
+
     <section class="reveal">
       <h2 class="section-title">FAQs</h2>
       <div class="faq-container">
