--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="video-container">
         <iframe
           src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Freel%2F539351792569691%2F&show_text=0&width=500"
-          width="500" height="888" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+          width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
           allowfullscreen="true"
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
       </div>
